--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ItemActivity"
-            android:parentActivityName=".MainActivity" >
-        </activity>
+        <activity android:name=".ItemActivity"></activity>
     </application>
 
 </manifest>
